Fix list_box too wide

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -175,6 +175,9 @@ body {
 .one-item-n {
   position: relative; }
 
+.one-item-n-l {
+  position: relative; }
+
 .two-item {
   position: relative; }
 
